OLD1/manual/manifests/gravitee/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apim-gravitee
  labels:
    app.kubernetes.io/name: apim-gravitee
