OLD1/manual/manifests/gravitee/07-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gravitee-mongo
  namespace: apim-gravitee
spec:
  selector:
    app: gravitee-mongo
  ports:
  - port: 27017
    targetPort: 27017
