OLD1/manual/manifests/gravitee/12-management-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gravitee-management-api
  namespace: apim-gravitee
spec:
  selector:
    app: gravitee-management-api
  ports:
  - port: 8083
    targetPort: 8083
