OLD1/manual/manifests/gravitee/31-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gravitee-portal
  namespace: apim-gravitee
spec:
  selector:
    app: gravitee-portal
  ports:
  - port: 8085
    targetPort: 8080
