OLD1/manual/manifests/gravitee/50-ingress-console.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gravitee-console
  namespace: apim-gravitee
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Host $host:31443;
      proxy_set_header X-Forwarded-Port 31443;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - apim-gravitee.local
    secretName: gravitee-console-tls
  rules:
  - host: apim-gravitee.local
    http:
      paths:
      - path: /management
        pathType: Prefix
        backend:
          service:
            name: gravitee-management-api
            port:
              number: 8083
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gravitee-console
            port:
              number: 8084
